--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     stringr
+URL: https://github.com/angelalmachado/regexcite
+BugReports: https://github.com/angelalmachado/regexcite/issues
