--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Angela", "Machado", , "angelalopesmachado@gmail.com", role = c("aut", "cre"))
 Description: Convenience functions to make some common tasks with string
-    manipulation and regular expressions a bit easier.
+    manipulation, regular expressions  and additions a bit easier.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
